--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "nexus-conn-sendgrid",
+  "name": "@nexus-switchboard/nexus-conn-sendgrid",
   "version": "0.0.1",
+  "keywords": ["nexus-connection"],
   "description": "Wrapper around a sendgrid client that provides nexus connection interfaces.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
