--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^6.5.0",
+    "@nexus-switchboard/nexus-extend": "^0.5",
+    "@sendgrid/mail": "^6.5.3",
     "assert": "^2.0.0",
     "debug": "^4.1.1",
-    "request": "^2.88.0",
-    "@nexus-switchboard/nexus-extend": "^0.4"
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "@types/node": "^12.7.5",
     "@types/debug": "^4.1.5",
+    "@types/node": "^12.12.29",
     "@types/request": "^2.48.4",
-    "typescript": "^3.7.5",
-    "tslint": "^6.0.0"
+    "tslint": "^6.0.0",
+    "typescript": "^3.8.3"
   }
 }
